--- a/eventicoUI/src/index.html
+++ b/eventicoUI/src/index.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8">
   <title>EventicoUI</title>
   <base href="/">
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body style="background-color : #7599b3">
-  <app-root></app-root>
+<body>
+  <app-root>
+  </app-root>
   <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 </body>
 </html>
